@@ -1,7 +1,8 @@
 package tech.derbent.api.entityOfProject.domain;
 
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 import org.jspecify.annotations.Nullable;
 import jakarta.persistence.Column;
 import jakarta.persistence.FetchType;
@@ -83,7 +84,7 @@ public abstract class CProjectItem<EntityClass> extends CEntityOfProject<EntityC
 	 *                    "active", "name", "description", "project", "assignedTo", "createdBy", "status"
 	 * @return true if the entity matches the search criteria in any of the specified fields */
 	@Override
-	public boolean matchesFilter(final String searchValue, final java.util.@Nullable Collection<String> fieldNames) {
+	public boolean matchesFilter(final String searchValue, @Nullable Collection<String> fieldNames) {
 		if ((searchValue == null) || searchValue.isBlank()) {
 			return true; // No filter means match all
 		}
@@ -91,7 +92,7 @@ public abstract class CProjectItem<EntityClass> extends CEntityOfProject<EntityC
 			return true;
 		}
 		final String lowerSearchValue = searchValue.toLowerCase().trim();
-		if (fieldNames.remove("status") && getStatus().matchesFilter(lowerSearchValue, List.of("name"))) {
+		if (fieldNames.remove("status") && (getStatus() != null) && getStatus().matchesFilter(lowerSearchValue, Arrays.asList("name"))) {
 			return true;
 		}
 		return false;
